--- a/Documentación/memoria.tex
+++ b/Documentación/memoria.tex
@@ -379,8 +379,8 @@
 % Datos de portada
 \title{Estudio de herramientas de realidad aumentada y caso práctico}
 \author{\nombre}
-\tutor{Pedro Luis Sánchez Ortega}
-\cotutor{Álvar Arnaiz González}
+\tutor{Álvar Arnaiz González}
+\cotutor{Pedro Luis Sánchez Ortega}
 \date{\today}
 
 \begin{document}
@@ -464,7 +464,11 @@ Realidad aumentada, Unity, Vuforia, Aplicación Android, herramientas educativas
 % Abstract en inglés
 \renewcommand*\abstractname{Abstract}
 \begin{abstract}
-A \textbf{brief} presentation of the topic addressed in the project.
+Since a few decades, the advances in computing have made the real world coexist with the virtual world, even replacing it in some tasks or purposes. Techniques that combine virtual elements with the real world are called augmented reality.
+
+In this project we'll do a study about different augmented reality tools. We'll compare its different functionalities as well as its adventages and disadventages. Choosing which one of the tools stand out along the others. Furthermore, this projects will focus on how these augmented reality tools can be used for teaching.
+
+To complete the Final Degree Project, we'll develop an application oriented to teaching, with the previously studied tools, to test its features. The idea of this application is to encourage the use of new ways of learning through the use of augmented reality. The example developed aims to see the growth process of a plant.
 \end{abstract}
 
 \renewcommand*\abstractname{Keywords}
