--- a/Documentación/tex/2_Objetivos_del_proyecto.tex
+++ b/Documentación/tex/2_Objetivos_del_proyecto.tex
@@ -1,7 +1,7 @@
 \capitulo{2}{Objetivos del proyecto}
 
 \subsection{Objetivos generales}
-El proyecto tiene por objetivo hacer un análisis exhaustivo de entornos de desarrollo de aplicaciones de Realidad Aumentada, demostrando la capacidad de estas herramientas para su uso en la docencia. Se platea conocer las diferentes herramientas disponibles en estos momentos, así como aquellas soluciones más apropiadas para cada caso, móvil, gafas de RV, u otros.
+El proyecto tiene por objetivo hacer un análisis exhaustivo de entornos de desarrollo de aplicaciones de Realidad Aumentada, demostrando la capacidad de estas herramientas para su uso en la docencia. Se platea conocer las diferentes herramientas disponibles en estos momentos, así como aquellas soluciones más apropiadas para cada caso, móvil, gafas de VR\footnote{Realidad virtual}, u otros.
 
 Se espera, de entre las herramientas propuestas, poder conocer sus ventajas y desventajas y la viabilidad de su uso en comparación con otras. El resultado de todo ello será una tabla comparativa en la que observar fácilmente sus características principales.
 
@@ -14,12 +14,11 @@ Para la creación del ejemplo se tiene como objetivo también el uso del MergeCu
 \subsection{Objetivos Técnicos}
 \begin{itemize}
 \item Realizar un estudio detallado del estado del arte de tecnologías de Realidad Aumentada. 	
-\item Utilizar Unity para el desarrollo de un ejemplo que ponga en práctica las herramientas AR.
+\item Utilizar Unity para el desarrollo de un ejemplo que ponga en práctica las herramientas AR\footnote{Realidad Aumentada}.
 \item Uso de MergeCube como herramienta sobre la que construir el ejemplo.
 \item Uso de una herramienta de AR compatible con Unity.
-\item Utilizar Visual Studio para la programación de scripts del proyecto en Unity.
-\item Hacer uso de otra herramienta de desarrollo distinta a Unity, que requiera un usuario menos experimentado, como podría ser un alumno o profesor ajenos a la informática.
-\item Poner en práctica lo aprendido en Organización de Proyectos: usando git como repositorio, concretamente con GitHub. Además para facilitar la organización de las issues  se hará uso de la extensión ZenHub.
+\item Utilizar \textit{Visual Studio} para la programación de scripts del proyecto en \textit{Unity}.
+\item Poner en práctica lo aprendido en Organización de Proyectos: usando git como repositorio, concretamente con \textit{GitHub}. Además para facilitar la organización de las issues  se hará uso de la extensión \textit{ZenHub}.
 
 	
 \end{itemize}
