--- a/Documentación/tex/3_Conceptos_teoricos.tex
+++ b/Documentación/tex/3_Conceptos_teoricos.tex
@@ -8,26 +8,30 @@ La realidad virtual (VR--Virtuality Reality) se diferencia de la anterior, en qu
 
 La realidad aumentada, como su nombre indica, tiene por objetivo aumentar la percepción de la realidad, el mundo real. Para ello por medio de diferentes técnicas, logra colocar a través de una cámara y la pantalla, un objeto virtual en la posición exacta de la pantalla, para que logre la sensación de que ese objeto realmente existe en esa posición del mundo real.
 
-\subsection{Realidad aumentada y virtual diferencias} 
-Es frecuente que la realidad aumentada se confunda con la que se podría considerar su hermana, la realidad virtual. Esto se debe a similitud de tanto sus nombre, como más importante sus objetivos. La realidad virtual también pretende colocar un objeto virtual en una posición realista, la diferencia es que no lleva el objeto al mundo real, sino que hace creer al usuario, que él mismo se encuentra dentro de un entorno totalmente nuevo, un mundo virtual.
+\subsection{Diferencias entre realidad aumentada y virtual} 
+Es frecuente que la realidad aumentada se confunda con la que se podría considerar su hermana, la realidad virtual. Esto se debe a similitud de tanto sus nombre, como más importante sus objetivos. 
+
+La realidad virtual también pretende colocar un objeto virtual en una posición realista, la diferencia es que no lleva el objeto al mundo real, sino que hace creer al usuario, que él mismo se encuentra dentro de un entorno totalmente nuevo, un mundo virtual.
 
 \section{Técnicas de realidad aumentada}
-Existen diferentes técnicas por las que lograr realidad aumentada, principalmente se pueden agrupar en dos grupos, la detección de marcadores y la detección del entorno. En el primero para lograr el efecto de realidad aumentada se usa una referencia visual, que puede ser una imagen o un código QR. Mientras que en la segunda no se utiliza ninguna referencia visual, sino que es capaz de entender su entorno, siendo capaz de distinguir superficies planas.
+Existen diferentes técnicas por las que lograr realidad aumentada, principalmente se pueden agrupar en dos grupos, la detección de marcadores y la detección del entorno. 
+
+En el primero para lograr el efecto de realidad aumentada se usa una referencia visual, que puede ser una imagen o un código QR. Mientras que en la segunda no se utiliza ninguna referencia visual, sino que es capaz de entender su entorno, siendo capaz de distinguir superficies planas.
 
 \subsection{Detección de marcadores}
 
-La detección de marcadores (Targets) se trata de una técnica de realidad aumentada en que los sistemas utilizan como referencia espacial, para situar elementos que queremos superponer, una figura o imagen concreta que ha sido especificada previamente. Los marcadores mas comunes y simples son los códigos QR, pues se tratan de imágenes diseñadas para que puedan ser reconocidas fácilmente por las cámaras (ver imagen~\ref{fig:Memoria/ejemploMarcadorCasa}).
+La detección de marcadores (Targets) se trata de una técnica de realidad aumentada en que los sistemas utilizan como referencia espacial, para situar elementos que queremos superponer, una figura o imagen concreta que ha sido especificada previamente. Los marcadores más comunes y simples son los códigos QR, pues se tratan de imágenes diseñadas para que puedan ser reconocidas fácilmente por las cámaras (ver imagen~\ref{fig:Memoria/ejemploMarcadorCasa}).
 
 \imagen{Memoria/ejemploMarcadorCasa}{Ejemplo un marcador sencillo~\cite{AR_company}.}
 
-Con la mejora de las cámaras, también es posible utilizar como marcadores imágenes mas complejas, como por ejemplo un folleto publicitario o la foto de un planeta.
+Con la mejora de las cámaras, también es posible utilizar como marcadores imágenes mas complejas, como por ejemplo, un folleto publicitario o la foto de un planeta.
 También es posible que el marcador se trate de un objeto físico, como por ejemplo una lámpara, o un coche.
 
 \imagen{Memoria/ejemploMarcadorTigre}{Ejemplo donde una carta de un tigre es un marcador~\cite{AR_company}.}
 
-Aunque gracias al avance de la calidad de las cámaras y del software de reconocimiento, es posible utilizar marcadores mas complejos, esto también implicará que será mas probable que falle, y por consecuencia, se desencuadren las imágenes insertadas por AR, que los tiempos de detección sean mas largos etc.
+Aunque gracias al avance de la calidad de las cámaras y del software de reconocimiento, es posible utilizar marcadores más complejos, esto también implicará que será mas probable que falle, y por consecuencia, se desencuadren las imágenes insertadas por AR, que los tiempos de detección sean mas largos etc.
 
-Se pueden clasificar los marcadores en~\cite{linowes_babilinski_2017}:
+Los marcadores se pueden clasificar en~\cite{linowes_babilinski_2017}:
 
 
 
@@ -38,13 +42,13 @@ Se pueden clasificar los marcadores en~\cite{linowes_babilinski_2017}:
 	\item \textbf{Imágenes}:		
 	El poder usar imágenes evita tener que crear marcadores personalizados. El reconocimiento de imágenes entra en la categoría de seguimiento de características naturales. Su calidad como marcador, dependerá de si tiene un borde que defina claramente esa imagen, del contraste de sus colores o la complejidad de su composición.
 	\item \textbf{Múltiples Marcadores}:
-	Es el caso de usar mas de un marcador al mismo tiempo por la misma cámara. Permitiendo así tener distintos objetos en la misma escena simultáneamente. También es posible crearlos formando objetos geométricos, un ejemplo sería el Mergecube(ver imagen~\ref{fig:Memoria/mergecube}).
+	Es el caso de usar más de un marcador al mismo tiempo por la misma cámara. Permitiendo así tener distintos objetos en la misma escena simultáneamente. También es posible crearlos formando objetos geométricos, un ejemplo sería el Mergecube (ver imagen~\ref{fig:Memoria/mergecube}).
 	\item \textbf{Reconocimiento de texto}:
 	Algunos SDK de realidad aumentada cuentan con la capacidad de distinguir textos. La precisión estará influenciada dependiendo del tipo de fuente de las letra. 
 	\item \textbf{Formas Simples}:
-	Algunas aplicaciones tienen la capacidad de distinguir diferentes formas simples, como son cubos, cilindros\dots. También pueden distinguir las medidas de las formas, pudiendo así diferenciar si un cubo es mas grande que otro.
+	Algunas aplicaciones tienen la capacidad de distinguir diferentes formas simples, como son cubos, cilindros\dots. También pueden distinguir las medidas de las formas, pudiendo así diferenciar si un cubo es más grande que otro.
 	\item \textbf{Reconocimiento de objetos}:		
-	Se trata del siguiente nivel, la capacidad de distinguir objetos. No solo reconocerá e identificará la forma y tamaño del objeto, también detalles característicos que le puedan diferenciar de otro. Vuforia por ejemplo cuenta con una funcionalidad llamada <<Vuforia Object Scanner>>, que permite escanear un objeto para una copia digital, que se podría usar como marcador. En la imagen \ref{fig:Memoria/vuforia_recoObjeto} podemos ver un ejemplo de la aplicación de Vuforia, en la que escanea un coche.  
+	Se trata del siguiente nivel, la capacidad de distinguir objetos. No solo reconocerá e identificará la forma y tamaño del objeto, también detalles característicos que le puedan diferenciar de otro. Vuforia por ejemplo, cuenta con una funcionalidad llamada <<Vuforia Object Scanner>>, que permite escanear un objeto para una copia digital, que se podría usar como marcador. En la imagen \ref{fig:Memoria/vuforia_recoObjeto} podemos ver un ejemplo de la aplicación de Vuforia, en la que escanea un coche.  
 	
 \end{itemize}
 
@@ -61,18 +65,18 @@ Se pueden clasificar los marcadores en~\cite{linowes_babilinski_2017}:
 
 \subsubsection{Mergecube}\label{section:mergecube}
 
-El Mergecube\footnote{\url{https://mergeedu.com/}} se trata de un cubo diseñado por Merge, el cual tiene grabado unos dibujos por sus 6 caras, estos dibujos actúan de marcadores. Es posible mover el cubo al mismo tiempo que se usa, de esa manera se consigue una experiencia mas interactiva. Es por eso que el mergecube es ideal para aplicarlo en experiencias educativas.
+El Mergecube\footnote{\url{https://mergeedu.com/}} se trata de un cubo diseñado por Merge, el cual tiene grabado unos dibujos por sus 6 caras, estos dibujos actúan de marcadores. Es posible mover el cubo al mismo tiempo que se usa, de esa manera se consigue una experiencia más interactiva. Es por eso que el Mergecube es ideal para aplicarlo en experiencias educativas.
 
 \imagen{Memoria/mergecube}{Mergecube~\cite{barker_2019}.} 
 
 \subsection{Detección del entorno}
 
 La detección del entorno trata de poder reconocer el entorno que la cámara capta y ser capaz de, sin la ayuda de un marcador, poder ubicar los modelos en el escenario de forma realista.
-Para esto hay diferentes técnicas, en resumen estas técnicas lo que hacen es detectar los cambios de profundidad de la imagen, y con esos datos evaluar qué objetos están mas o menos cerca, cuáles son una superficie plana, si se trata de un objeto que no tiene profundidad (como una pared), entre otros.
+Para esto hay diferentes técnicas. En resumen estas técnicas lo que hacen es detectar los cambios de profundidad de la imagen, y con esos datos evaluar qué objetos están mas o menos cerca, cuáles son una superficie plana, si se trata de un objeto que no tiene profundidad (como una pared), entre otros.
 
 \subsubsection{SLAM}
 
-Simultaneous Localization and Mapping, es una técnica para estimar los movimientos de los sensores y reconstruir la estructura en un entorno desconocido. Cuando esta técnica se aplica en cámaras, se denomina visual SLAM (vSLAM), ya que se basará en la información visual recibida.
+\textit{Simultaneous Localization and Mapping}, es una técnica para estimar los movimientos de los sensores y reconstruir la estructura en un entorno desconocido. Cuando esta técnica se aplica en cámaras, se denomina visual SLAM (vSLAM), ya que se basará en la información visual recibida.
 La mayoría de herramientas de realidad aumentada, que tienen la capacidad de detectar el entorno sin necesidad de marcadores, se basan en esta técnica~\cite{taketomi2017visual}.
 
 Los algoritmos de vSLAM, no solo son usados únicamente para la AR, también pueden ser aplicados para robótica, o los coches autónomos no tripulados.
