--- a/Documentación/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/Documentación/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -26,6 +26,7 @@ Tras concluir el desarrollo, puedo pensar en algunas tareas para posibles trabaj
 	\item Llevar la aplicación a otras plataformas como iOS o Windows. Por ejemplo sería interesante llevar la aplicación a Windows, usando Webcam.
 	\item Uso de la realidad aumentada Web. Especialmente con las mejoras en las lineas de telecomunicaciones con la conexión 5G, permitirá realizar grandes avances en la realidad aumentada.
 	\item Uso de otras herramientas de realidad aumentada, para completar con nuevas funcionalidades o simplemente mejorar las ya existentes.
+	\item Añadir la posibilidad de usar la realidad aumentada, junto a unas gafas VR (las gafas que se usan con el móvil), para poder experimentar la realidad aumentada con las manos libres. 
 	
 \end{itemize}
 
